# Pixel-Art-Raytracer

./: .clang-tidy  .gitignore  CMakeLists.txt  README.org  main.cpp  oklab_computer.v
res/: color.spv  compute.spv  depth.spv  fragment.spv  normals.spv  palette.slang  reference_fragment.spv  reference_shaders.slang  reference_vertex.spv  shaders.slang  vertex.spv
src/: alternative.cpp  reference.cpp  shared_behavior.hpp  sorting.cpp  sprites.hpp
